# HardwareWallet-v1

./: CMakeLists.txt  README.md  s140_nrf52840_xxaa.ld  setup-mpack.sh
cmake/: arm-toolchain.cmake  device.cmake  nordic-sdk.cmake  softdevice.cmake
cmake/libraries/: ble.cmake  bsp.cmake  cli.cmake  fstorage.cmake  gfx.cmake  log.cmake  mpack.cmake  nfc.cmake  peer_manager.cmake  rand.cmake  segger_rtt.cmake  timer.cmake  util.cmake
src/: app.c  app.h  app_ble.c  app_ble.h  ble_config.h  cli.c  cli.h  config.h  eth.c  eth.h  flash.c  flash.h  menu.c  menu.h  mpack-config.h  oled.c  oled.h  rand.c  rand.h  screen.c  screen.h  ssd1306.c  ssd1306.h  util.c  util.h
src/screens/: connected.c  main_menu.c  pair.c  send.c  unlock.c
src/services/: device_service.c  device_service.h  eth_service.c  eth_service.h
