cmake_minimum_required(VERSION 3.4)
project("HardwareWallet" C ASM)
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(SDK_DIR "${PROJECT_SOURCE_DIR}/nRF5_SDK_14.1.0_1dda907")
if (DEFINED "ENV{NORDIK_SDK}")
    set(SDK_DIR "$ENV{NORDIK_SDK}")
endif()

set(FAMILY "NRF52")
set(DEVICE "NRF52840")
set(VARIENT "XXAA")
set(BOARD "PCA10056")
set(SOFTDEVICE "S140")
set(SOFTDEVICE_VERSION "5.0.0-2.alpha")

set(OUT "wallet")
file(GLOB_RECURSE SRC_FILES "src/*.c")
string(APPEND COMMON_FLAGS " -Wall -Werror -include config.h")
include_directories("src")

include("cmake/device.cmake")
include("cmake/softdevice.cmake")
include("cmake/nordic-sdk.cmake")
include("cmake/arm-toolchain.cmake")

include("cmake/libraries/ble.cmake")
include("cmake/libraries/bsp.cmake")
include("cmake/libraries/cli.cmake")
include("cmake/libraries/fstorage.cmake")
include("cmake/libraries/gfx.cmake")
include("cmake/libraries/log.cmake")
include("cmake/libraries/mpack.cmake")
include("cmake/libraries/nfc.cmake")
include("cmake/libraries/peer_manager.cmake")
include("cmake/libraries/rand.cmake")
include("cmake/libraries/segger_rtt.cmake")
include("cmake/libraries/timer.cmake")
include("cmake/libraries/util.cmake")
target_link_libraries(${OUT} log cli util bsp fstorage ble nfc gfx mpack)
